# BookApp

./: .env  .replit  config.py  index.html  main.py
.upm/: store.json
app/: __init__.py  routes.py
files/: server.py
folderfiles/: pyproject.toml  replit_zip_error_log.txt
folderfiles/nix/: binary-cache-v6.sqlite
folderfiles/replit/modules/: python-3.9.res  python-base-3.11.res  python-base-3.12.res  qbasic.res
folderfiles/replit/nix/: env.json
progress/: progress.html
templates/: base.html  get_started.html  index.html  letsgetstarted.html  progress.html  reading_list.html
