[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
run = "python3 server.py"  # Change this to the command that runs your server file
dependencies = [
    "azure-cosmos>=4.9.0",
    "requests>=2.32.3",
    "supabase>=2.11.0",
]
